crates/ruff_python_parser/tests/snapshots/invalid_syntax@if_stmt_elif_missing_colon.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/if_stmt_elif_missing_colon.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..46,
        body: [
            If(
                StmtIf {
                    node_index: NodeIndex(None),
                    range: 0..45,
                    test: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 3..4,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 10..14,
                            },
                        ),
                    ],
                    elif_else_clauses: [
                        ElifElseClause {
                            range: 15..30,
                            node_index: NodeIndex(None),
                            test: Some(
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 20..21,
                                        id: Name("y"),
                                        ctx: Load,
                                    },
                                ),
                            ),
                            body: [
                                Pass(
                                    StmtPass {
                                        node_index: NodeIndex(None),
                                        range: 26..30,
                                    },
                                ),
                            ],
                            runtime_body: None,
                            runtime_orelse: None,
                        },
                        ElifElseClause {
                            range: 31..45,
                            node_index: NodeIndex(None),
                            test: None,
                            body: [
                                Pass(
                                    StmtPass {
                                        node_index: NodeIndex(None),
                                        range: 41..45,
                                    },
                                ),
                            ],
                            runtime_body: None,
                            runtime_orelse: None,
                        },
                    ],
                    runtime_body: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | if x:
2 |     pass
3 | elif y
  |       ^ Syntax Error: Expected `:`, found newline
4 |     pass
5 | else:
6 |     pass
  |
